# Seminario_investigacion

./: .gitattributes  .gitignore  README.md  modulo 2.docx  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
Modelo ML/: .gitignore  pyproject.toml
Modelo ML/data/processed/: df_cartera_scaled.csv
Modelo ML/data/raw/: Cierres Cartera.xlsx  Consolidado_Variables_Segmentación_Cartera (1).xlsx
Modelo ML/notebooks/01_EDA/: 1_1_exploracion_inicial.ipynb  1_1_exploracion_inicial_consolidado.ipynb  1_2_preprocesamiento.ipynb  1_2_preprocesamiento_consolidado.ipynb  1_2_preprocesamiento_mes_actual.ipynb
Modelo ML/notebooks/02_modelos/: 1_1_modeloXGBoost.ipynb  1_1_modeloXGBoostPCA.ipynb
data/raw/: Cierres Cartera.csv  Consolidado_Variables_Segmentación_Cartera.xlsx
notebooks/: 01_analisis_inicial.ipynb  EDA_individual.ipynb
